src/test/examples/custom/valid/fullPairTypes/assignNullReassign.wacc
# Declare proper nested pair, then assign to null, then reassign to intial type

# Exit:
# 0

# Program:

begin
  pair(int, bool) a1 = newpair (1, true);
  pair(char, string) b1 = newpair ('a', "Hello");

  pair(pair, pair) c = newpair(a1, b1);

  pair(int, bool) a2 = newpair (2, false);
  pair(char, string) b2 = newpair ('b', "world");

  c = null;

  fst c = a2;
  snd c = b2;

  c = newpair(null, null);

  fst c = a2;
  snd c = b2;

  c = newpair(a1, null);

  fst c = a2;
  snd c = b2;

  c = newpair(null, b1);

  fst c = a2;
  snd c = b2
end
